--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "smartcontractwatcher",
-  "version": "0.1.2",
+  "version": "0.1.4",
   "description": "CLI tool for monitoring smart contract events and states on Ethereum",
   "main": "smartcontractwatcher.js",
   "bin": {
@@ -11,7 +11,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/SuryaBudiman123/smartdeployer.git"
+    "url": "https://github.com/SuryaBudiman123/smartdeployer"
   },
   "author": "SuryaBudiman123",
   "license": "MIT",
@@ -20,6 +20,7 @@
     "ethers": "^5.5.1",
     "dotenv": "^16.0.0",
     "smartcontractwatcher": "^0.1.0",
+    "whispering-waves-of-web3": "^0.0.1",
     "commander": "^9.0.0",
     "chalk": "^4.1.2"
   }
